[package]
name = "site-blocker"
version = "0.1.0"
edition = "2021"
description = "A CLI to block sites through the systems hosts file"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
directories = "5.0.1"
log = "0.4.20"
stderrlog = "0.6.0"
tempfile = "3.10.1"
thiserror = "1.0.57"

[dev-dependencies]
tempdir = "0.3.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
