[package]
name = "site-blocker"
version = "0.1.2"
edition = "2021"
description = "A CLI to block sites through the systems hosts file"
repository = "https://github.com/lilydoar/site-blocker"
license = "MIT"
exclude = [".github/", ".gitignore"]

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
directories = "5.0.1"
log = "0.4.20"
stderrlog = "0.6.0"
tempfile = "3.10.1"
thiserror = "1.0.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
